<resources>
    <string name="app_name" translatable="false">Leben In Deutschland Test</string>


    <string name="test_menu">Tests</string>
    <string name="statistic_menu">Statistic</string>
    <string name="settings_menu">Settings</string>
    <string name="version_error">Unknown</string>

    <!-- Lands -->
    <string name="baden_württemberg">Baden-Württemberg</string>
    <string name="bavaria">Bavaria</string>
    <string name="berlin">Berlin</string>
    <string name="brandenburg">Brandenburg</string>
    <string name="bremen">Bremen</string>
    <string name="hamburg">Hamburg</string>
    <string name="hesse">Hesse</string>
    <string name="lower_saxony">Lower Saxony</string>
    <string name="mecklenburg_vorpommern">Mecklenburg-Vorpommern</string>
    <string name="north_rhine_westphalia">North Rhine-Westphalia</string>
    <string name="rhineland_palatinate">Rhineland-Palatinate</string>
    <string name="saarland">Saarland</string>
    <string name="saxony">Saxony</string>
    <string name="saxony_anhalt">Saxony-Anhalt</string>
    <string name="schleswig_holstein">Schleswig-Holstein</string>
    <string name="thuringia">Thuringia</string>

    <string name="land_number" translatable="false">10</string>

    <!-- Topics -->
    <string name="constitutional_bodies">Constitutional bodies</string>
    <string name="constitutional_principles">Constitutional principles</string>
    <string name="federalism">Federalism</string>
    <string name="social_system">Social system</string>
    <string name="fundamental_rights">Fundamental rights</string>
    <string name="elections_and_participation">Elections and participation</string>
    <string name="political_parties">Political parties</string>
    <string name="tasks_of_the_state">Tasks of the state</string>
    <string name="duties">Duties</string>
    <string name="state_symbols">State symbols</string>
    <string name="municipality">Municipality</string>
    <string name="law_and_everyday_life">Law and everyday life</string>
    <string name="national_socialism_and_its_consequences">National Socialism and its consequences</string>
    <string name="important_stages_after_1945">Important stages after 1945</string>
    <string name="reunification">Reunification</string>
    <string name="germany_in_europe">Germany in Europe</string>
    <string name="religious_diversity">Religious diversity</string>
    <string name="education">Education</string>
    <string name="history_of_migration">History of migration</string>
    <string name="intercultural_coexistence">Intercultural coexistence</string>

    <!-- Languages -->
    <string name="arabic">Arabic</string>
    <string name="bulgarian">Bulgarian</string>
    <string name="chinese_simplified">Chinese (simplified)</string>
    <string name="chinese_traditional">Chinese (traditional)</string>
    <string name="czech">Czech</string>
    <string name="danish">Danish</string>
    <string name="english_american">English (American)</string>
    <string name="english_british">English (British)</string>
    <string name="estonian">Estonian</string>
    <string name="finnish">Finnish</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="greek">Greek</string>
    <string name="hungarian">Hungarian</string>
    <string name="indonesian">Indonesian</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="latvian">Latvian</string>
    <string name="lithuanian">Lithuanian</string>
    <string name="norwegian_bokmål">Norwegian (bokmål)</string>
    <string name="polish">Polish</string>
    <string name="portuguese">Portuguese</string>
    <string name="romanian">Romanian</string>
    <string name="russian">Russian</string>
    <string name="slovak">Slovak</string>
    <string name="slovenian">Slovenian</string>
    <string name="spanish">Spanish</string>
    <string name="swedish">Swedish</string>
    <string name="turkish">Turkish</string>
    <string name="ukrainian">Ukrainian</string>

    <!-- Statistics -->
    <string name="at_least_once_wrong_title">At least once wrong</string>
    <string name="mostly_wrong_title">Mostly wrong</string>
    <string name="last_answer_wrong_title">Last answer wrong</string>
    <string name="not_answered_yet_title">Not answered yet</string>
    <string name="last_answer_right_title">Last answer right</string>
    <string name="mostly_right_title">Mostly right</string>

    <string name="at_least_once_wrong_subtitle">Questions answered at least one time wrong</string>
    <string name="mostly_wrong_subtitle">Questions answered more wrong than right</string>
    <string name="last_answer_wrong_subtitle">Questions answered wrong the last time</string>
    <string name="not_answered_yet_subtitle">Questions never answered</string>
    <string name="last_answer_right_subtitle">Questions answered right the last time</string>
    <string name="mostly_right_subtitle">Questions answered more right than wrong</string>

    <!-- Themes -->
    <string name="politics_in_democracy">Politics in democracy</string>
    <string name="history_and_responsibility">History and responsibility</string>
    <string name="people_and_society">People and society</string>


    <!-- Dialogs strings -->
    <string name="cancel_dialog">Cancel</string>
    <string name="ok_dialog">OK</string>


    <!-- Settings header -->
    <string name="preferences_header">Preferences</string>
    <string name="about_header">About app</string>

    <!-- Settings title -->
    <string name="theme_title">Theme</string>
    <string name="land_title">Land</string>
    <string name="target_language_title">Target language</string>
    <string name="version_title">Version</string>
    <string name="open_source_code_title">Open source code</string>

    <!-- Settings subtitle -->
    <string name="theme_subtitle">Light or dark theme for your app</string>
    <string name="land_subtitle">Your land where you live</string>
    <string name="target_language_subtitle">The language into which the translation takes place</string>
    <string name="open_source_code_subtitle">View open source code on GitHub</string>

    <!-- Settings data -->
    <string name="theme_element_1">System</string>
    <string name="theme_element_2">Light</string>
    <string name="theme_element_3">Dark</string>
    <string name="theme_element_4">AMOLED</string>

    <!-- Main test cardView -->
    <string name="main_test_cardView_title" translatable="false">Einbürgerungstest</string>
    <string name="main_test_cardView_subtitle">33 questions</string>
    <string name="main_test_cardView_description">Random 33 questions with a 60 minute timer. Everything is like in a real test!</string>
    <string name="main_test_cardView_action_button">Test</string>


    <string name="testsHeader">Questions</string>

    <string name="all_questions_title">All questions</string>
    <string name="all_questions_subtitle">All general and land questions</string>

    <string name="land_questions_subtitle">Questions specific to your land</string>
    <string name="error_land_questions_title">Please select your land</string>

    <string name="image_questions_title">Images</string>
    <string name="image_questions_subtitle">Questions with images</string>

    <string name="is_favorite_questions_title">Favorite</string>
    <string name="is_favorite_questions_subtitle">Your favorite questions</string>

    <!-- Tests ChipGroup -->
    <string name="theme_chip">Theme</string>
    <string name="topic_chip">Topic</string>
    <string name="others_chip">Others</string>

    <!-- Test -->
    <string name="timer">Progress:</string>
    <string name="answered">Answered:</string>
    <string name="right">Right:</string>

    <!-- URL -->
    <string name="git_hub_url" translatable="false">https://github.com/forzzzzz/Leben-In-Deutschland-Test</string>

</resources>