<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.main.tabs.TestFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_name"
            app:menu="@menu/top_app_bar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/main_test_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                style="@style/Widget.Material3.CardView.Filled"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="128dp"
                        android:src="@drawable/main_test_card_view_img"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_test_cardView_title"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:textSize="24sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_test_cardView_subtitle"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_test_cardView_description"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/main_action_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_test_cardView_action_button"
                        android:layout_margin="16dp"
                        android:layout_gravity="end"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tests_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testsHeader"
                android:textSize="24sp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/main_test_card_view"
                app:layout_constraintStart_toStartOf="parent"/>

<!--            <HorizontalScrollView-->
<!--                android:id="@+id/tests_chip_group_horizontal_scroll_view"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginHorizontal="24dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                app:layout_constraintTop_toBottomOf="@id/tests_header_text"-->
<!--                app:layout_constraintStart_toStartOf="parent">-->

<!--                <com.google.android.material.chip.ChipGroup-->
<!--                    android:id="@+id/tests_chip_group"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:singleLine="true"-->
<!--                    app:singleSelection="true">-->

<!--                    <com.google.android.material.chip.Chip-->
<!--                        android:id="@+id/theme_chip"-->
<!--                        style="@style/Widget.Material3.Chip.Filter"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/theme_chip"/>-->

<!--                    <com.google.android.material.chip.Chip-->
<!--                        android:id="@+id/topic_chip"-->
<!--                        style="@style/Widget.Material3.Chip.Filter"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/topic_chip"/>-->

<!--                    <com.google.android.material.chip.Chip-->
<!--                        android:id="@+id/others_chip"-->
<!--                        style="@style/Widget.Material3.Chip.Filter"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/others_chip"/>-->

<!--                </com.google.android.material.chip.ChipGroup>-->
<!--            </HorizontalScrollView>-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tests_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/tests_header_text"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>