<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.test.TestActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:navigationIconTint="?attr/colorControlNormal"
            tools:title="@string/main_test_cardView_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/progress_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        style="@style/Widget.Material3.CardView.Filled"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/timer_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/timer"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/timer"/>

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="60:00"/>

            <TextView
                android:id="@+id/answered_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/answered"
                android:textSize="18sp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/timer_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/answered"/>

            <TextView
                android:id="@+id/answered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/timer"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="0/33"/>

            <TextView
                android:id="@+id/right_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/right"
                android:textSize="18sp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/answered_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/right"/>

            <TextView
                android:id="@+id/right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/answered"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="0/0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/test_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/progress_card_view"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/translate_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>